Fix "Dropzone animation on receipt bin transactions invisible" (#6726)
Closes https://github.com/hackclub/hcb/issues/6725

--- a/app/assets/stylesheets/components/_file_dropzone.scss
+++ b/app/assets/stylesheets/components/_file_dropzone.scss
@@ -1,5 +1,5 @@
 .dropzone {
-  &[class^="transaction--"] {
+  &[class^="transaction"] {
     outline: 5px dashed $orange;
     outline-offset: -5px;
   }
